--- a/.github/workflows/elixir.yaml
+++ b/.github/workflows/elixir.yaml
@@ -2,10 +2,10 @@ name: Elixir
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
