--- a/.github/workflows/elixir.yaml
+++ b/.github/workflows/elixir.yaml
@@ -8,17 +8,17 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
       - name: Setup elixir
-        uses: actions/setup-elixir@v1
+        uses: erlef/setup-beam@v1
         with:
-          elixir-version: 1.11.0
           otp-version: 23.1
+          elixir-version: 1.11.0
 
       - name: Install Dependencies
         run: mix deps.get
