--- a/.github/workflows/elixir.yaml
+++ b/.github/workflows/elixir.yaml
@@ -32,8 +32,8 @@ jobs:
       - name: Run Credo
         run: mix credo --strict
 
-      - name: Run Tests
-        run: mix test
+      - name: Run Tests with Coverage
+        run: mix coveralls.json
       
       - name: Upload Coverage
         run: bash <(curl -s https://codecov.io/bash)
